{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 5,
  "lineage": "547d2549-bd1e-b858-8653-85d7395702e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-lab1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00eb20669e0990cb4",
            "arn": "arn:aws:ec2:us-east-1:747685816505:instance/i-0f6aefd8ae1b8195c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f6aefd8ae1b8195c",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "demo",
            "monitoring": false,
            "primary_network_interface_id": "eni-0727f96b6abd44206",
            "private_dns": "ip-10-100-27-170.ec2.internal",
            "private_ip": "10.100.27.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0315bb04a06c3e321",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d45a460e80029489",
            "tags": {
              "Name": "asic"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c1175f662350034f"
            ]
          },
          "depends_on": [
            "aws_security_group.security_group",
            "data.aws_ami.amazon_linux_ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:747685816505:security-group/sg-0c1175f662350034f",
            "description": "Security group for instance asic",
            "egress": [],
            "id": "sg-0c1175f662350034f",
            "ingress": [],
            "name": "asic-sg",
            "name_prefix": null,
            "owner_id": "747685816505",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04022def7485261bb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1259161284",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1175f662350034f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_ingress_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2712292340",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1175f662350034f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.security_group"
          ]
        }
      ]
    }
  ]
}